#18443 closed bug (fixed)
[ifconfig] The requested address family is not available (regression)
Reported by: | diver | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/Command Line Tools | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev57079 x86_64 running in VMware Fusion.
Running ifconfig
(up/down/auto-config) prints The requested address family is not available.
and doesn't do anything else anymore.
Change History (4)
comment:1 by , 21 months ago
comment:2 by , 21 months ago
Component: | Kits/Network Kit → Applications/Command Line Tools |
---|
comment:4 by , 21 months ago
Version: | R1/beta4 → R1/Development |
---|
Note:
See TracTickets
for help on using tickets.
https://review.haiku-os.org/c/haiku/+/6597