ifconfig: check the family when different from AF_UNSPEC

fix #18443

Change-Id: I05df404311f7e2048b83d5c4ebfdf8e1b0fc64c0
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6597
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>